--- a/medicoComentarios.html
+++ b/medicoComentarios.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clinica San Martin</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./Styles/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Clinica San Martin</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="./Styles/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
 </head>
+
 <body>
   <div class="container">
     <nav>
@@ -16,10 +19,10 @@
         <div class="logo">
           <ul>
             <li>
-          <img src="Imagenes/logo.jpg" alt="">
-          <h1>Clinica San Martin</h1>
-          <span>Dashboard</span>
-           </li>
+              <img src="Imagenes/logo.jpg" alt="">
+              <h1>Clinica San Martin</h1>
+              <span>Dashboard</span>
+            </li>
           </ul>
         </div>
         <ul>
@@ -27,7 +30,7 @@
             <a href="#">
               <i class="fa-solid fa-house"></i>
               <span class="nav-item">Inicio</span></a>
-          </li>                
+          </li>
           <li>
             <a href="#">
               <i class="far fa-clipboard"></i>
@@ -39,7 +42,7 @@
               <span class="nav-item">Salir</span></a>
           </li>
         </ul>
-      </div>  
+      </div>
     </nav>
 
     <section class="main">
@@ -58,12 +61,13 @@
       <div class="medico">
         <div class="medico_nombre">
           <h1>Comentarios del paciente</h1>
-          <span>Paciente: Carlos Andres Martinez -ID: 256489755</span>              
-        </div>        
+          <span>Paciente: Carlos Andres Martinez -ID: 256489755</span>
+        </div>
       </div>
       <div>
         <p class="text-center" style="margin-top: 40px;">
-          <button type="button" class="btn btn-raised btn-info btn-sm" data-toggle="modal" data-target="#modal"><i class="far fa-file"></i> &nbsp; NUEVO COMENTARIO</button>
+          <button type="button" class="btn btn-raised btn-info btn-sm" data-toggle="modal" data-target="#modal"><i
+              class="far fa-file"></i> &nbsp; NUEVO COMENTARIO</button>
         </p>
       </div>
 
@@ -80,7 +84,10 @@
           <tr>
             <th scope="row">1</th>
             <td>18/sep/2022 11:30</td>
-            <td>El paciente presentaba muchas cosas la verda, no se le pudo hacer nada Diam class at pulvinar facilisis neque quisque ultricies nunc varius vulputate ad ut, velit ullamcorper sapien gravida mi aliquet placerat pellentesque vehicula duis pretium habitant, quis dictum feugiat faucibus venenatis parturient tortor per eros arcu est</td>            
+            <td>El paciente presentaba muchas cosas la verda, no se le pudo hacer nada Diam class at pulvinar facilisis
+              neque quisque ultricies nunc varius vulputate ad ut, velit ullamcorper sapien gravida mi aliquet placerat
+              pellentesque vehicula duis pretium habitant, quis dictum feugiat faucibus venenatis parturient tortor per
+              eros arcu est</td>
             <td>
               <a href="#" class="btn btn-primary">
                 <i class="fas fa-sync-alt"></i>
@@ -90,7 +97,10 @@
           <tr>
             <th scope="row">3</th>
             <td>19/Ago/2022 14:00</td>
-            <td>El paciente presentaba muchas cosas la verda, no se le pudo hacer nada Diam class at pulvinar facilisis neque quisque ultricies nunc varius vulputate ad ut, velit ullamcorper sapien gravida mi aliquet placerat pellentesque vehicula duis pretium habitant, quis dictum feugiat faucibus venenatis parturient tortor per eros arcu est</td>            
+            <td>El paciente presentaba muchas cosas la verda, no se le pudo hacer nada Diam class at pulvinar facilisis
+              neque quisque ultricies nunc varius vulputate ad ut, velit ullamcorper sapien gravida mi aliquet placerat
+              pellentesque vehicula duis pretium habitant, quis dictum feugiat faucibus venenatis parturient tortor per
+              eros arcu est</td>
             <td>
               <a href="#" class="btn btn-primary">
                 <i class="fas fa-sync-alt"></i>
@@ -100,7 +110,10 @@
           <tr>
             <th scope="row">3</th>
             <td>11/Ago/2022 16:20</td>
-            <td>El paciente presentaba muchas cosas la verda, no se le pudo hacer nada Diam class at pulvinar facilisis neque quisque ultricies nunc varius vulputate ad ut, velit ullamcorper sapien gravida mi aliquet placerat pellentesque vehicula duis pretium habitant, quis dictum feugiat faucibus venenatis parturient tortor per eros arcu est</td>            
+            <td>El paciente presentaba muchas cosas la verda, no se le pudo hacer nada Diam class at pulvinar facilisis
+              neque quisque ultricies nunc varius vulputate ad ut, velit ullamcorper sapien gravida mi aliquet placerat
+              pellentesque vehicula duis pretium habitant, quis dictum feugiat faucibus venenatis parturient tortor per
+              eros arcu est</td>
             <td>
               <a href="#" class="btn btn-primary">
                 <i class="fas fa-sync-alt"></i>
@@ -108,8 +121,9 @@
             </td>
           </tr>
         </tbody>
-      </table> 
+      </table>
     </section>
-  </div>   
+  </div>
 </body>
+
 </html>
