--- a/medicoCitas.html
+++ b/medicoCitas.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clinica San Martin</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./Styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  </head>
 <body>
   <div class="container">
     <nav>
@@ -17,7 +17,7 @@
           <ul>
             <li>
           <img src="Imagenes/logo.jpg" alt="">
-          <h1>Clinica San Martin</h1>
+          <h4>Clinica San Martin</h4>
           <span>Dashboard</span>
            </li>
           </ul>
@@ -27,7 +27,12 @@
             <a href="#">
               <i class="fa-solid fa-house"></i>
               <span class="nav-item">Inicio</span></a>
-          </li>                
+          </li>
+          <li>
+            <a href="#">
+              <i class="fab fa-dochub"></i>
+              <span class="nav-item">Comentarios</span></a>
+          </li>
           <li>
             <a href="#">
               <i class="far fa-clipboard"></i>
@@ -49,66 +54,72 @@
           <i class="far fa-bell"></i>
         </div>
         <div class="buscador">
-          <input type="buscar" placeholder="Buscar Medicos">
+          <input type="buscar" placeholder="Buscar">
+           <button type="button" class="btn btn-light"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
         <div class="burgur_menu">
           <i class="fas fa-bars"></i>
         </div>
       </div>
       <div class="medico">
-        <div class="medico_nombre">
-          <h1>Listado de citas</h1>
-          <span>Listado de las citas asignadas al médico</span>
-        </div>        
+        <div class="medico_nombre"> 
+          <strong><h4>Citas asignadas</h4></strong>
+          
+          <span>Lista de citas</span>
+        </div>
+        <div class="medico_fecha">
+          <span>Fecha</span>  
+          <p>20/09/2022</p>
+        </div>
+        <div class="medico_equipo">
+          <img src="Imagenes/img1.jpg" alt="Medico 1">
+          <img src="Imagenes/img2.jpg" alt="Medico 2">
+          <img src="Imagenes/img3.jpg" alt="Medico 3">
+        </div>
       </div>
 
-      <table class="table">
-        <thead class="thead-dark">
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Nombre</th>
-            <th scope="col">Apellido</th>
-            <th scope="col">Documento</th>
-            <th scope="col">Atender</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>9525558</td>
-            <td>
-              <a href="#" class="btn btn-success">
-                <i class="fas fa-user-check"></i>
-              </a>
-            </td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>32154556</td>
-            <td>
-              <a href="#" class="btn btn-success">
-                <i class="fas fa-user-check"></i>
-              </a>
-            </td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>6632525</td>
-            <td>
-              <a href="#" class="btn btn-success">
-                <i class="fas fa-user-check"></i>
-              </a>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="main-body">
+        <div class="main-content"> 
+          <div class="container bg-white">
+          <table class="table table-striped">
+            <thead>
+              <tr class="table-primary"></tr>
+               <th scope="col">ID</th>
+                <th scope="col">Nombres</th>
+                <th scope="col">Apellidos</th>
+                <th scope="col">Documento</th>
+                <th scope="col">Atender</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Mauricio</td>
+                <td> Escobar Velez</td>
+                <td>1023578461</td>
+                <td> <a href=""><i class="fa-solid fa-user-doctor" style="color: green;"></i></a> </td>
+              </tr>
+              <tr>
+                <th scope="row">1</th>
+                <td>Mauricio</td>
+                <td> Escobar Velez</td>
+                <td>1023578461</td>
+                <td> <a href=""><i class="fa-solid fa-user-doctor" style="color: green;"></i></a> </td>
+              </tr>
+              <tr>
+                <th scope="row">1</th>
+                <td>Mauricio</td>
+                <td> Escobar Velez</td>
+                <td>1023578461</td>
+                <td> <a href=""><i class="fa-solid fa-user-doctor" style="color: green;"></i></a> </td>
+              </tr>
+            </tbody>
+          </table>  
+        </div>
+          </div>
+        </div>
+      </div>
     </section>
-  </div>    
+  </div>
 </body>
 </html>
