--- a/usuariosLista.html
+++ b/usuariosLista.html
@@ -109,7 +109,7 @@
                 <td>Escobar123@gmail.com</td>
                 <td>Medico</td>
                 <td> <a href=""><i class="fa-solid fa-user-pen"></i></a> </td>
-                <td> <a href=""><i class="fa-solid fa-trash"></i></a> </td>
+                <td> <a href=""><i class="fa-solid fa-trash" style="color: rgba(248, 7, 39, 0.986);"></i></a> </td>
               </tr>
               <tr>
                 <th scope="row">2</th>
@@ -119,7 +119,7 @@
                 <td>migue123@gmail.com</td>
                 <td>paciente  </td>
                 <td> <a href=""><i class="fa-solid fa-user-pen"></i></a> </td>
-                <td> <a href=""><i class="fa-solid fa-trash"></i></a> </td>
+                <td> <a href=""><i class="fa-solid fa-trash" style="color: rgba(248, 7, 39, 0.986);"></i></a> </td>
               </tr>
               <tr>
                 <th scope="row">3</th>
@@ -129,12 +129,12 @@
                 <td>monic@gmail.com</td>
                 <td>paciente  </td>
                 <td> <a href=""><i class="fa-solid fa-user-pen"></i></a> </td>
-                <td> <a href=""><i class="fa-solid fa-trash"></i></a> </td>
+                <td> <a href=""><i class="fa-solid fa-trash" style="color: rgba(248, 7, 39, 0.986);"></i></a> </td>
               </tr>
             </tbody>
           </table>  
         </div>
-          </div>
+      </div>
         </div>
       </div>
     </section>
