--- a/citasMedicas.html
+++ b/citasMedicas.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Clinica San Martin</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="./Styles/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
+
 <body>
   <div class="container">
     <nav>
@@ -16,10 +19,10 @@
         <div class="logo">
           <ul>
             <li>
-          <img src="Imagenes/logo.jpg" alt="">
-          <h1>Clinica San Martin</h1>
-          <span>Dashboard</span>
-           </li>
+              <img src="Imagenes/logo.jpg" alt="">
+              <h4>Clinica San Martin</h4>
+              <span>Dashboard</span>
+            </li>
           </ul>
         </div>
         <ul>
@@ -27,17 +30,7 @@
             <a href="#">
               <i class="fa-solid fa-house"></i>
               <span class="nav-item">Inicio</span></a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="far fa-user"></i>
-              <span class="nav-item">Usuario</span></a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="fab fa-dochub"></i>
-              <span class="nav-item">Comentarios</span></a>
-          </li>
+          </li>         
           <li>
             <a href="#">
               <i class="far fa-clipboard"></i>
@@ -49,7 +42,7 @@
               <span class="nav-item">Salir</span></a>
           </li>
         </ul>
-      </div>  
+      </div>
     </nav>
 
     <section class="main">
@@ -59,7 +52,8 @@
           <i class="far fa-bell"></i>
         </div>
         <div class="buscador">
-          <input type="buscar" placeholder="Buscar Citas">
+          <input type="buscar" placeholder="Buscar">
+          <button type="button" class="btn btn-light"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
         <div class="burgur_menu">
           <i class="fas fa-bars"></i>
@@ -67,142 +61,155 @@
       </div>
       <div class="medico">
         <div class="medico_nombre">
-          <h1>Solicitud de citas</h1>
-          <span>Listado citas disponibles en el sistema</span>
-        </div>        
+          <strong>
+            <h4>Citas</h4>
+          </strong>
+
+          <span>Citas médicas</span>
+        </div>
+        <div class="medico_fecha">
+          <span>Fecha</span>
+          <p>20/09/2022</p>
+        </div>
+        <div class="medico_equipo">
+          <img src="Imagenes/img1.jpg" alt="Medico 1">
+          <img src="Imagenes/img2.jpg" alt="Medico 2">
+          <img src="Imagenes/img3.jpg" alt="Medico 3">
+        </div>
       </div>
-      <div>
-        <p class="text-center" style="margin-top: 40px;">
-          <button type="button" class="btn btn-raised btn-info btn-sm" data-toggle="modal" data-target="#modal"><i class="far fa-file"></i> &nbsp; NUEVA CITA</button>
-        </p>
+
+      <div class="main-body">
+        <div class="main-content">
+          <button type="button" class="btn btn-light mb-3"><i class="fa-solid fa-user-plus"></i> Solicitar cita</button>
+          <div class="container bg-white">
+            <table class="table table-striped">
+              <thead class="thead-black">
+                <tr>
+                  <th scope="form-group col-md-6"> Fecha y hora</th>
+                  <th scope="col">Medico</th>
+                  <th scope="col">Solicitar</th>
+                  <th scope="col">Comentarios</th>
+                  <th scope="col">Calificación</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>18/sep/2022 11:30 </td>
+                  <td>Marcela Garzon</td>
+                  <td>
+                    <a href=""><i class="fa-solid fa-user-check"></i></a>
+                  </td>
+                  <td>
+                    <a href=""><i class="fa-solid fa-book"></i></a>
+                  </td>
+                  </td>
+                  <td>
+                    <p class="clasificacion">
+                      <input id="radio1" type="radio" name="estrellas" value="5">
+                      <!--
+                  --><label for="radio1">★</label>
+                      <!--
+                  --><input id="radio2" type="radio" name="estrellas" value="4">
+                      <!--
+                  --><label for="radio2">★</label>
+                      <!--
+                  --><input id="radio3" type="radio" name="estrellas" value="3">
+                      <!--
+                  --><label for="radio3">★</label>
+                      <!--
+                  --><input id="radio4" type="radio" name="estrellas" value="2">
+                      <!--
+                  --><label for="radio4">★</label>
+                      <!--
+                  --><input id="radio5" type="radio" name="estrellas" value="1">
+                      <!--
+                  --><label for="radio5">★</label>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td>18/sep/2022 11:30 </td>
+                  <td>Marcela Garzon</td>
+                  <td>
+                    <a href=""><i class="fa-solid fa-user-check"></i></a>
+                  </td>
+                  <td>
+                    <a href=""><i class="fa-solid fa-book"></i></a>
+                  </td>
+                  </td>
+                  <td>
+                    <p class="clasificacion">
+                      <input id="radio1" type="radio" name="estrellas" value="5">
+                      <!--
+                  --><label for="radio1">★</label>
+                      <!--
+                  --><input id="radio2" type="radio" name="estrellas" value="4">
+                      <!--
+                  --><label for="radio2">★</label>
+                      <!--
+                  --><input id="radio3" type="radio" name="estrellas" value="3">
+                      <!--
+                  --><label for="radio3">★</label>
+                      <!--
+                  --><input id="radio4" type="radio" name="estrellas" value="2">
+                      <!--
+                  --><label for="radio4">★</label>
+                      <!--
+                  --><input id="radio5" type="radio" name="estrellas" value="1">
+                      <!--
+                  --><label for="radio5">★</label>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td>18/sep/2022 11:30 </td>
+                  <td>Marcela Garzon</td>
+                  <td>
+                    <a href=""><i class="fa-solid fa-user-check"></i></a>
+                  </td>
+                  <td>
+                    <a href=""><i class="fa-solid fa-book"></i></a>
+                  </td>
+                  </td>
+                  <td>
+                    <p class="clasificacion">
+                      <input id="radio1" type="radio" name="estrellas" value="5">
+                      <!--
+                  --><label for="radio1">★</label>
+                      <!--
+                  --><input id="radio2" type="radio" name="estrellas" value="4">
+                      <!--
+                  --><label for="radio2">★</label>
+                      <!--
+                  --><input id="radio3" type="radio" name="estrellas" value="3">
+                      <!--
+                  --><label for="radio3">★</label>
+                      <!--
+                  --><input id="radio4" type="radio" name="estrellas" value="2">
+                      <!--
+                  --><label for="radio4">★</label>
+                      <!--
+                  --><input id="radio5" type="radio" name="estrellas" value="1">
+                      <!--
+                  --><label for="radio5">★</label>
+                    </p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
       </div>
-
-
-      <table class="table">
-        <thead class="thead-black">
-          <tr>
-            <th scope="form-group col-md-6">   Fecha y hora</th>
-            <th scope="col">Medico</th>
-            <th scope="col">Solicitar</th>
-            <th scope="col">Comentarios</th>
-            <th scope="col">Calificación</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>18/sep/2022 11:30 </td>
-            <td>Marcela Garzon</td>
-            <td>
-              <a href="#" class="btn btn-success">
-                <i class="fas fa-user-check"></i>
-              </a>
-            </td>
-            <td>
-              <a href="#" class="btn btn-success" onclick="location.href='file:///C:/Users/yenyg/OneDrive/Documentos/Hospital/ProyectoClinicaSanMartin/medicoComentarios.html'"> <i class="fas fa fa-book"></i>>
-              </a>
-            </td>
-          </td>
-          <td>
-            <p class="clasificacion">
-              <input id="radio1" type="radio" name="estrellas" value="5"><!--
-              --><label for="radio1">★</label><!--
-              --><input id="radio2" type="radio" name="estrellas" value="4"><!--
-              --><label for="radio2">★</label><!--
-              --><input id="radio3" type="radio" name="estrellas" value="3"><!--
-              --><label for="radio3">★</label><!--
-              --><input id="radio4" type="radio" name="estrellas" value="2"><!--
-              --><label for="radio4">★</label><!--
-              --><input id="radio5" type="radio" name="estrellas" value="1"><!--
-              --><label for="radio5">★</label>
-            </p>
-          </td>
-          </tr>
-
-          <tr>
-            <td>18/sep/2022 12:00 </td>
-            <td>Brayan Alejandro Diaz</td>
-            <td>
-              <a href="#" class="btn btn-success">
-                <i class="fas fa-user-check"></i>
-              </a>
-            </td>
-            <td>
-              <a href="#" class="btn btn-success" onclick="location.href='file:///C:/Users/yenyg/OneDrive/Documentos/Hospital/ProyectoClinicaSanMartin/medicoComentarios.html'"> <i class="fas fa fa-book"></i>>
-              </a>
-            </td>
-            <td>
-              <p class="clasificacion">
-                <input id="radio1" type="radio" name="estrellas" value="5"><!--
-                --><label for="radio1">★</label><!--
-                --><input id="radio2" type="radio" name="estrellas" value="4"><!--
-                --><label for="radio2">★</label><!--
-                --><input id="radio3" type="radio" name="estrellas" value="3"><!--
-                --><label for="radio3">★</label><!--
-                --><input id="radio4" type="radio" name="estrellas" value="2"><!--
-                --><label for="radio4">★</label><!--
-                --><input id="radio5" type="radio" name="estrellas" value="1"><!--
-                --><label for="radio5">★</label>
-              </p>
-            </td>
-          </tr>
-
-          <tr>
-            <td>19/sep/2022 17:00 </td>
-            <td>Eduardo Jaimes Castillo</td>
-            <td>
-              <a href="#" class="btn btn-success">
-                <i class="fas fa-user-check"></i>
-              </a>
-            </td>
-            <td>
-              <a href="#" class="btn btn-success" onclick="location.href='file:///C:/Users/yenyg/OneDrive/Documentos/Hospital/ProyectoClinicaSanMartin/medicoComentarios.html'"> <i class="fas fa fa-book"></i>>
-              </a>
-            </td>
-            <td>
-              <p class="clasificacion">
-                <input id="radio1" type="radio" name="estrellas" value="5"><!--
-                --><label for="radio1">★</label><!--
-                --><input id="radio2" type="radio" name="estrellas" value="4"><!--
-                --><label for="radio2">★</label><!--
-                --><input id="radio3" type="radio" name="estrellas" value="3"><!--
-                --><label for="radio3">★</label><!--
-                --><input id="radio4" type="radio" name="estrellas" value="2"><!--
-                --><label for="radio4">★</label><!--
-                --><input id="radio5" type="radio" name="estrellas" value="1"><!--
-                --><label for="radio5">★</label>
-              </p>
-            </td>
-          </tr>
-
-          <tr>
-            <td>19/sep/2022 15:30 </td>
-            <td>Marcela Garzon</td>
-            <td>
-              <a href="#" class="btn btn-success">
-                <i class="fas fa-user-check"></i>
-              </a>
-            </td>
-            <td>
-              <a href="#" class="btn btn-success" onclick="location.href='file:///C:/Users/yenyg/OneDrive/Documentos/Hospital/ProyectoClinicaSanMartin/medicoComentarios.html'"> <i class="fas fa fa-book"></i>>
-              </a>
-            </td>
-            <td>
-              <p class="clasificacion">
-                <input id="radio1" type="radio" name="estrellas" value="5"><!--
-                --><label for="radio1">★</label><!--
-                --><input id="radio2" type="radio" name="estrellas" value="4"><!--
-                --><label for="radio2">★</label><!--
-                --><input id="radio3" type="radio" name="estrellas" value="3"><!--
-                --><label for="radio3">★</label><!--
-                --><input id="radio4" type="radio" name="estrellas" value="2"><!--
-                --><label for="radio4">★</label><!--
-                --><input id="radio5" type="radio" name="estrellas" value="1"><!--
-                --><label for="radio5">★</label>
-              </p>
-            </td>
-  
-    </section>
   </div>
-    
+  </section>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+    crossorigin="anonymous"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>  -->
 </body>
+
 </html>
