--- a/Vistas/Inicio.html
+++ b/Vistas/Inicio.html
@@ -21,7 +21,19 @@
           </div>
         </div>  
       </nav>
-      
+      <section class="main">
+        <div class="top-menu">
+          <div class="icons">
+            <i class="far fa-envelope"></i>
+            <i class="far fa-bell"></i>
+          </div>
+          <div class="buscador">
+            <input type="buscar" placeholder="Buscar Medicos">
+          </div>
+          <div class="burgur_menu">
+            <i class="fas fa-bars"></i>
+          </div>
+        </section>   
       <div class="Navbar_inicio">
         <ul>
             <li>
