--- a/citasMedicas.html
+++ b/citasMedicas.html
@@ -100,7 +100,7 @@
                     <a href=""><i class="fa-solid fa-user-check"></i></a>
                   </td>
                   <td>
-                    <a href=""><i class="fa-solid fa-book"></i></a>
+                    <a href="medicoComentarios.html"><i class="fa-solid fa-book"></i></a>
                   </td>
                   </td>
                   <td>
@@ -134,7 +134,7 @@
                     <a href=""><i class="fa-solid fa-user-check"></i></a>
                   </td>
                   <td>
-                    <a href=""><i class="fa-solid fa-book"></i></a>
+                    <a href="medicoComentarios.html"><i class="fa-solid fa-book"></i></a>
                   </td>
                   </td>
                   <td>
@@ -168,7 +168,7 @@
                     <a href=""><i class="fa-solid fa-user-check"></i></a>
                   </td>
                   <td>
-                    <a href=""><i class="fa-solid fa-book"></i></a>
+                    <a href="medicoComentarios.html"><i class="fa-solid fa-book"></i></a>
                   </td>
                   </td>
                   <td>
