Se modifica diseño de la calificacion

--- a/citasMedicas.html
+++ b/citasMedicas.html
@@ -30,7 +30,7 @@
             <a href="#">
               <i class="fa-solid fa-house"></i>
               <span class="nav-item">Inicio</span></a>
-          </li>         
+          </li>
           <li>
             <a href="#">
               <i class="far fa-clipboard"></i>
@@ -104,27 +104,13 @@
                   </td>
                   </td>
                   <td>
-                    <p class="clasificacion">
-                      <input id="radio1" type="radio" name="estrellas" value="5">
-                      <!--
-                  --><label for="radio1">★</label>
-                      <!--
-                  --><input id="radio2" type="radio" name="estrellas" value="4">
-                      <!--
-                  --><label for="radio2">★</label>
-                      <!--
-                  --><input id="radio3" type="radio" name="estrellas" value="3">
-                      <!--
-                  --><label for="radio3">★</label>
-                      <!--
-                  --><input id="radio4" type="radio" name="estrellas" value="2">
-                      <!--
-                  --><label for="radio4">★</label>
-                      <!--
-                  --><input id="radio5" type="radio" name="estrellas" value="1">
-                      <!--
-                  --><label for="radio5">★</label>
-                    </p>
+                    <div class="calificacion">
+                      <a href="#" data-value="1" title="Votar con 1 estrellas">&#9733;</a>
+                      <a href="#" data-value="2" title="Votar con 2 estrellas">&#9733;</a>
+                      <a href="#" data-value="3" title="Votar con 3 estrellas">&#9733;</a>
+                      <a href="#" data-value="4" title="Votar con 4 estrellas">&#9733;</a>
+                      <a href="#" data-value="5" title="Votar con 5 estrellas">&#9733;</a>
+                      <div>
                   </td>
                 </tr>
                 <tr>
@@ -138,27 +124,13 @@
                   </td>
                   </td>
                   <td>
-                    <p class="clasificacion">
-                      <input id="radio1" type="radio" name="estrellas" value="5">
-                      <!--
-                  --><label for="radio1">★</label>
-                      <!--
-                  --><input id="radio2" type="radio" name="estrellas" value="4">
-                      <!--
-                  --><label for="radio2">★</label>
-                      <!--
-                  --><input id="radio3" type="radio" name="estrellas" value="3">
-                      <!--
-                  --><label for="radio3">★</label>
-                      <!--
-                  --><input id="radio4" type="radio" name="estrellas" value="2">
-                      <!--
-                  --><label for="radio4">★</label>
-                      <!--
-                  --><input id="radio5" type="radio" name="estrellas" value="1">
-                      <!--
-                  --><label for="radio5">★</label>
-                    </p>
+                    <div class="calificacion">
+                      <a href="#" data-value="1" title="Votar con 1 estrellas">&#9733;</a>
+                      <a href="#" data-value="2" title="Votar con 2 estrellas">&#9733;</a>
+                      <a href="#" data-value="3" title="Votar con 3 estrellas">&#9733;</a>
+                      <a href="#" data-value="4" title="Votar con 4 estrellas">&#9733;</a>
+                      <a href="#" data-value="5" title="Votar con 5 estrellas">&#9733;</a>
+                      <div>
                   </td>
                 </tr>
                 <tr>
@@ -172,27 +144,13 @@
                   </td>
                   </td>
                   <td>
-                    <p class="clasificacion">
-                      <input id="radio1" type="radio" name="estrellas" value="5">
-                      <!--
-                  --><label for="radio1">★</label>
-                      <!--
-                  --><input id="radio2" type="radio" name="estrellas" value="4">
-                      <!--
-                  --><label for="radio2">★</label>
-                      <!--
-                  --><input id="radio3" type="radio" name="estrellas" value="3">
-                      <!--
-                  --><label for="radio3">★</label>
-                      <!--
-                  --><input id="radio4" type="radio" name="estrellas" value="2">
-                      <!--
-                  --><label for="radio4">★</label>
-                      <!--
-                  --><input id="radio5" type="radio" name="estrellas" value="1">
-                      <!--
-                  --><label for="radio5">★</label>
-                    </p>
+                    <div class="calificacion">
+                      <a href="#" data-value="1" title="Votar con 1 estrellas">&#9733;</a>
+                      <a href="#" data-value="2" title="Votar con 2 estrellas">&#9733;</a>
+                      <a href="#" data-value="3" title="Votar con 3 estrellas">&#9733;</a>
+                      <a href="#" data-value="4" title="Votar con 4 estrellas">&#9733;</a>
+                      <a href="#" data-value="5" title="Votar con 5 estrellas">&#9733;</a>
+                      <div>
                   </td>
                 </tr>
               </tbody>
