--- a/citasMedicas.html
+++ b/citasMedicas.html
@@ -27,7 +27,7 @@
         </div>
         <ul>
           <li>
-            <a href="#">
+            <a href="index.html">
               <i class="fa-solid fa-house"></i>
               <span class="nav-item">Inicio</span></a>
           </li>
