"se creo la vista de atencion del paciente"

--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
         </div>
         <ul>
           <li>
-            <a href="#">
+            <a href="index.html">
               <i class="fa-solid fa-house"></i>
               <span class="nav-item">Inicio</span></a>
           </li>
           <li>
-            <a href="#">
+            <a href="usuarioLista.html">
               <i class="far fa-user"></i>
               <span class="nav-item">Usuario</span></a>
           </li>
           <li>
-            <a href="#">
+            <a href="medicoComentarios.html">
               <i class="fab fa-dochub"></i>
               <span class="nav-item">Comentarios</span></a>
           </li>
           <li>
-            <a href="#">
+            <a href="medicoCitas.html">
               <i class="far fa-clipboard"></i>
               <span class="nav-item">Citas</span></a>
           </li>
