--- a/Login Clinica-San-Martin/index.html
+++ b/Login Clinica-San-Martin/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Ingreso y Registro de Clinica San Martin</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
   </head>
   <body>
     <div class="center">
@@ -20,12 +23,22 @@
           <label>Contraseña</label>
         </div>
         <div class="pass">Olvidaste tu contraseña?</div>
-        <input type="submit" value="Login">
+        <a href="../index.html" type="button" class="btn btn-primary"
+        style=" border-color: #2691d9;
+        transition: .5s;">
+  Ingresar
+      </a>
         <div class="signup_link">
-          No tienes una cuenta? <a href="#">Registrate</a>
+          No tienes una cuenta? <a href="">Registrate</a>
         </div>
       </form>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+    crossorigin="anonymous"></script>
 
   </body>
 </html>
