--- a/Vistas/Inicio.html
+++ b/Vistas/Inicio.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" href="/Styles/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
 </head>
 <body>
+  <div class="container">
     <nav>
         <div class="navbar">
           <div class="logo">
@@ -19,45 +21,42 @@
              </li>
             </ul>
           </div>
-        </div>  
+        </div> 
+        <div class="icons">
+          <i class="far fa-envelope"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-instagram"></i>
+        </div> 
       </nav>
-      <section class="main">
+      
         <div class="top-menu">
-          <div class="icons">
-            <i class="far fa-envelope"></i>
-            <i class="far fa-bell"></i>
-          </div>
           <div class="buscador">
             <input type="buscar" placeholder="Buscar Medicos">
           </div>
-          <div class="burgur_menu">
-            <i class="fas fa-bars"></i>
-          </div>
-        </section>   
+        </div>  
+        
       <div class="Navbar_inicio">
         <ul>
             <li>
               <a href="#">
-                <i class="fa-solid fa-house"></i>
                 <span class="nav-item">Casa</span></a>
             </li>
             <li>
               <a href="#">
-                <i class="far fa-user"></i>
                 <span class="nav-item">¿Quienes somos?</span></a>
             </li>
             <li>
               <a href="#">
-                <i class="fab fa-dochub"></i>
                 <span class="nav-item">Inicio</span></a>
             </li>
             <li>
-              <a href="#">
-                <i class="far fa-clipboard"></i>
+              <a href="/Vistas/Registrarse.html">
                 <span class="nav-item">Registrarse</span></a>
             </li>
           </ul>
       </div>
-
+    </div>
+   
 </body>
 </html>
