--- a/Vistas/Registrarse.html
+++ b/Vistas/Registrarse.html
@@ -25,7 +25,7 @@
             </div>
             <ul>
               <li>
-                <a href="#">
+                <a href="/Vistas/Inicio.html">
                   <i class="fa-solid fa-house"></i>
                   <span class="nav-item">Inicio</span></a>
               </li>
